test/types/records/vass/issue-11846-b.good
issue-11846-b.chpl:5: error: unable to resolve type
